fixed aligngroup margin
got rid of aligngroup margin for mobile

--- a/style.css
+++ b/style.css
@@ -794,6 +794,8 @@ li .email,
 	.aligngroup {
 		column-count: 1;
 		-moz-column-count: 1;
+		
+		margin: 0 0 0 0px;
 	}
 	
 	.hcol-a {
